# soil-api

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
app/: profile.speedscope.json
app/areas/: models.py
app/instruments/models/: experiment.py
app/plots/: models.py
app/plots/samples/: models.py
app/plots/sensors/: models.py
app/projects/: models.py
app/sensors/: models.py  services.py
app/soil/profiles/: models.py
app/transects/models/: transects.py
migration/: Cargo.toml
migration/src/: lib.rs  m20250217_105133_first_migration.rs  m20250219_075041_sensorprofile.rs  m20250219_152310_modify_sensordata_moisturecount.rs  m20250226_092944_use_utc_timestamps.rs  m20250226_104416_remove_last_updated_sensordata.rs  m20250227_110710_remove_indexes_on_large_attributes.rs  m20250303_101534_remove_areaid_from_sensors.rs  m20250304_110517_set_unique_transect_name_per_area.rs  m20250307_124139_plot_remove_notnull_gradient.rs  m20250507_101706_add_ispublic_flag_to_areas.rs  m20250508_122136_add_additional_plot_sample_fields.rs  m20250509_133815_add_soil_classification_table.rs  m20250509_152257_add_soil_classification_to_plot_sample.rs  m20250512_075700_add_unique_constraint_to_soil_types.rs  m20250512_114505_remove_notnull_constraints_on_description.rs  m20250512_123505_add_sample_date.rs  m20250515_154112_allow_multiple_sensors_on_sample_soil_profile.rs  m20250526_133243_add_depth_for_sensor_moisture.rs  m20250702_115754_create_enum_soil_type_sensor_profile.rs  m20260226_000000_add_flux_redox_websites.rs  m20260226_100000_precompute_area_hulls.rs  m20260227_000000_precompute_sensor_averages.rs  m20260302_000000_add_6h_continuous_aggregate.rs
migrations/: env.py
migrations/versions/: 20c57bba555c_add_plot_sensor_link.py  c7c4c9c065e0_add_depth_property_to_plot_sensor_.py
src/: config.rs  lib.rs  main.rs
src/areas/: db.rs  mod.rs  models.rs  schemas.rs  services.rs  views.rs
src/common/: filter.rs  geometry.rs  mod.rs  models.rs  pagination.rs  sort.rs  traits.rs  views.rs
src/common/crud/: mod.rs  models.rs  routes.rs  traits.rs
src/common/db/: types.rs
src/common/macros/: router.rs  structs.rs
src/gnss/: db.rs  models.rs  views.rs
src/instrument_experiments/: db.rs  mod.rs  models.rs  views.rs
src/instrument_experiments/channels/: db.rs  mod.rs  models.rs  tools.rs  views.rs
src/models/: alembic_version.rs  area.rs  cake.rs  cake_filling.rs  filling.rs  fruit.rs  instrumentexperiment.rs  instrumentexperimentchannel.rs  mod.rs  plot.rs  plotsample.rs  plotsensorassignments.rs  posts.rs  prelude.rs  project.rs  sea_orm_active_enums.rs  sensor.rs  soilprofile.rs  soiltype.rs  spatial_ref_sys.rs  transect.rs  transectnode.rs
src/plots/: db.rs  mod.rs  models.rs  schemas.rs  views.rs
src/plots/sensors/: db.rs  models.rs
src/projects/: db.rs  mod.rs  models.rs  project.rs  schemas.rs  views.rs
src/routes/: mod.rs
src/routes/areas/: db.rs  models.rs  services.rs  views.rs
src/routes/gnss/: db.rs  models.rs
src/routes/instrument_experiments/: db.rs  models.rs  views.rs
src/routes/instrument_experiments/channels/: db.rs  models.rs
src/routes/plots/: db.rs  models.rs
src/routes/private/: mod.rs
src/routes/private/area_websites/: db.rs  models.rs  views.rs
src/routes/private/areas/: db.rs  models.rs  services.rs  views.rs
src/routes/private/gnss/: models.rs
src/routes/private/instrument_experiments/: db.rs  mod.rs  models.rs  views.rs
src/routes/private/instrument_experiments/channels/: db.rs  (+2 more)
src/routes/private/plots/: db.rs  models.rs
src/routes/private/projects/: db.rs  models.rs
src/routes/private/samples/: db.rs  models.rs
src/routes/private/sensors/: db.rs  mod.rs  models.rs  services.rs  views.rs
src/routes/private/soil/: mod.rs
src/routes/private/transects/: db.rs  models.rs
src/routes/private/website_plot_exclusions/: db.rs  models.rs  views.rs
src/routes/private/website_sensor_exclusions/: db.rs  mod.rs  models.rs  views.rs
src/routes/private/websites/: db.rs  models.rs  views.rs
src/routes/projects/: db.rs  models.rs  views.rs
src/routes/public/: mod.rs  models.rs  views.rs  website_access.rs
src/routes/public/areas/: models.rs  views.rs
src/routes/public/sensors/: models.rs  views.rs
src/routes/samples/: db.rs  models.rs
src/routes/sensors/: db.rs  models.rs  services.rs  views.rs
src/routes/sensors/data/: db.rs
src/routes/sensors/profile/: db.rs  mod.rs  models.rs  views.rs
src/routes/soil/profiles/: db.rs  models.rs  views.rs
src/routes/soil/types/: db.rs  models.rs  views.rs
src/routes/transects/: db.rs  models.rs
src/routes/transects/nodes/: db.rs  models.rs
src/samples/: db.rs  models.rs  views.rs
src/schemas/: plot.rs
src/sensors/: db.rs  mod.rs  models.rs  services.rs  views.rs
src/sensors/data/: db.rs  models.rs
src/sensors/profile/: db.rs  mod.rs  models.rs  views.rs
src/sensors/profile/assignment/: db.rs  models.rs  views.rs
src/services/: mod.rs  rate_limit.rs
src/soil/profiles/: db.rs  models.rs  views.rs
src/soil/types/: db.rs  models.rs  views.rs
src/soil_profiles/: models.rs
src/transects/: db.rs  mod.rs  models.rs  schemas.rs  views.rs
src/transects/nodes/: db.rs  mod.rs  models.rs  schemas.rs
src/views/: plot.rs
tests/: mock_fixtures.rs  mod.rs  soil_type_test.rs
tests/api/: mod.rs  soil_profiles.rs  soil_types.rs
(+25 files in other folders)
