[package]
name = "soil-api-rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
async-trait = "0.1.85"
axum = { version = "0.8.1", features = ["macros"] }
axum-keycloak-auth = "0.7.0"
base64 = "0.22.1"
byteorder = "1.5.0"
chrono = { version = "0.4.39", features = ["serde"] }
crudcrate = "0.1.3"
csv = "1.3.1"
dotenvy = "0.15.7"
futures = "0.3.31"
hyper = "1.5.2"
lttb = "0.2.0"
migration = { path = "migration" }
rand = "0.9.0"
sea-orm = { version = "1.1.4", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json"
], default-features = false }
sea-orm-migration = "1.1.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_with = "3.10.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = { version = "1.13.2", features = ["serde", "v4", "fast-rng"] }

[dev-dependencies]
async-std = { version = "1.13", features = ["attributes"] }
rstest = "0.24.0"
sea-orm = { version = "1.0.1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
], default-features = false }
tower = { version = "0.5.2", features = ["util"] }
