[package]
name = "soil-api"
version = "2.1.6"
edition = "2024"
description = "API for managing SOIL lab data"
license = "MIT"
readme = "README.md"
repository = "https://github.com/LabSOIL/soil-api"
keywords = ["soil", "lab", "data", "api", "axum", "sea-orm"]
categories = ["web-programming", "database"]

[workspace]
members = [".", "migration"]

[dependencies]
async-trait = "0.1.85"
axum = { version = "0.8.4" }
axum-keycloak-auth = "0.8.1"
base64 = "0.22.1"
byteorder = "1.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
crs-definitions = "0.3.0"
crudcrate = "0.3.1"
# crudcrate = { path = "../crudcrate" }
dotenvy = "0.15.7"
futures = "0.3.31"
gpx = "0.10.0"
hyper = "1.5.2"
migration = { path = "migration" }
proj4rs = { version = "0.1.5", features = ["crs-definitions"] }
rand = "0.9.1"
sea-orm = { version = "1.1.10", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
], default-features = false }
sea-orm-migration = "1.1.10"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_with = "3.10.0"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.13.2", features = ["serde", "v4", "fast-rng"] }

[dev-dependencies]
async-std = { version = "1.13.1", features = ["attributes"] }
rstest = "0.25.0"
sea-orm = { version = "1.0.1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
], default-features = false }
tower = { version = "0.5.2", features = ["util"] }

[lints.clippy]
pedantic = "warn"
